--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -55,14 +55,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="ImageStuff\Texture.cs" />
+    <Compile Include="ImageStuff\TextureManager.cs" />
     <Compile Include="MapStuff\Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextureImportForm.cs">
+    <Compile Include="Windows\TextureImportForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TextureImportForm.Designer.cs">
+    <Compile Include="Windows\TextureImportForm.Designer.cs">
       <DependentUpon>TextureImportForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
@@ -77,7 +77,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="TextureImportForm.resx">
+    <EmbeddedResource Include="Windows\TextureImportForm.resx">
       <DependentUpon>TextureImportForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
