--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="ImageStuff\TextureManager.cs" />
+    <Compile Include="ImageStuff\TextureSheetPage.cs" />
     <Compile Include="MapStuff\Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
