--- a/Editor/Editor.csproj
+++ b/Editor/Editor.csproj
@@ -60,6 +60,12 @@
     <Compile Include="MapStuff\Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Windows\ConfirmSelection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\ConfirmSelection.Designer.cs">
+      <DependentUpon>ConfirmSelection.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\TextureImportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Windows\ConfirmSelection.resx">
+      <DependentUpon>ConfirmSelection.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Windows\TextureImportForm.resx">
       <DependentUpon>TextureImportForm.cs</DependentUpon>
     </EmbeddedResource>
