--- a/2DGame/2DGame.csproj
+++ b/2DGame/2DGame.csproj
@@ -46,9 +46,15 @@
     <Compile Include="GameStates\IGameState.cs" />
     <Compile Include="GameStates\Menu.cs" />
     <Compile Include="GameStates\StateController.cs" />
-    <Compile Include="Map\Map.cs" />
+    <Compile Include="Global.cs" />
+    <Compile Include="Items\BaseEntity.cs" />
+    <Compile Include="Items\AnimationComponent.cs" />
+    <Compile Include="Items\EntityManager.cs" />
+    <Compile Include="Map\Dungeon.cs" />
+    <Compile Include="Map\Level.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TEXTURECONSTS.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Extended, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
