--- a/2DGame/2DGame.csproj
+++ b/2DGame/2DGame.csproj
@@ -41,6 +41,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Camera.cs" />
+    <Compile Include="Controllers\InputManager.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameStates\GamePlayLoop.cs" />
     <Compile Include="GameStates\IGameState.cs" />
@@ -51,7 +53,9 @@
     <Compile Include="Items\AnimationComponent.cs" />
     <Compile Include="Items\EntityManager.cs" />
     <Compile Include="Map\Dungeon.cs" />
+    <Compile Include="Map\DungeonGenerator.cs" />
     <Compile Include="Map\Level.cs" />
+    <Compile Include="Map\TileDict.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TEXTURECONSTS.cs" />
